# openslam_flirtlib

src/gui/: MultiScaleDetectorPlotWidget.cpp
src/utils/: CMakeLists.txt  Convolution.hpp
